<resources>
    <string name="app_name">App_calculator</string>
    <string name="button_1">1</string>
    <string name="button_2">2</string>
    <string name="button_3">3</string>
    <string name="button_4">4</string>
    <string name="button_5">5</string>
    <string name="button_6">6</string>
    <string name="button_7">7</string>
    <string name="button_8">8</string>
    <string name="button_9">9</string>
    <string name="button_0">0</string>
    <string name="button_add">+</string>
    <string name="button_Min">-</string>
    <string name="button_Mul">*</string>
    <string name="button_sub">/</string>
    <string name="button_per">back</string>
    <string name="button_dot">.</string>
    <string name="button_squ">x(2)</string>
    <string name="button_equ">=</string>
    <string name="text_result">0</string>
    <string name="button_fac">AC</string>
    <string name="famu">\"\"</string>
    <string name="button_per1">%</string>
    <string name="button_sin">sin</string>
    <string name="button_cos">cos</string>
    <string name="button_tan">tan</string>
    <string name="button_jie">x!</string>
    <string name="button_left">(</string>
    <string name="button_right">)</string>
    <string name="button_gen">√</string>
    <string name="button_e">e</string>
    <string name="button_π">π</string>
</resources>
