<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E08181"
    tools:context=".compile_cal">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/famul"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/background_dark"
            android:textAlignment="textEnd"
            android:textColor="@android:color/background_light"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/result2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/background_dark"
            android:text="@string/text_result"
            android:textAlignment="textEnd"
            android:textColor="@android:color/background_light"
            android:textSize="24sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:baselineAligned="false"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/button_1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="#F38282"
                android:onClick="button_1"
                android:text="@string/button_1" />

            <Button
                android:id="@+id/button_2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="#F38282"
                android:onClick="button_2"
                android:text="@string/button_2" />

            <Button
                android:id="@+id/button_3"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="#F38282"
                android:onClick="button_3"
                android:text="@string/button_3" />

            <Button
                android:id="@+id/button_add"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="#F38282"
                android:onClick="button_add"
                android:text="@string/button_add" />

            <Button
                android:id="@+id/button_fac"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="#F38282"
                android:onClick="clear_all"
                android:text="@string/button_fac" />

            <Button
                android:id="@+id/button_back"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="#F38282"
                android:onClick="button_back"
                android:text="@string/button_per" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="visible">

            <Button
                android:id="@+id/button_4"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="#F38282"
                android:onClick="button_4"
                android:text="@string/button_4" />

            <Button
                android:id="@+id/button_5"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="#F38282"
                android:onClick="button_5"
                android:text="@string/button_5" />

            <Button
                android:id="@+id/button_6"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="#F38282"
                android:onClick="button_6"
                android:text="@string/button_6" />

            <Button
                android:id="@+id/button_Min"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="#F38282"
                android:onClick="button_sub"
                android:text="@string/button_Min" />

            <Button
                android:id="@+id/button_jie"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="#F38282"
                android:text="@string/button_jie" />

            <Button
                android:id="@+id/button_squ"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="#F38282"
                android:text="@string/button_squ" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/button_7"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="#F38282"
                android:onClick="button_7"
                android:text="@string/button_7" />

            <Button
                android:id="@+id/button_8"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="#F38282"
                android:onClick="button_8"
                android:text="@string/button_8" />

            <Button
                android:id="@+id/button_9"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="#F38282"
                android:onClick="button_9"
                android:text="@string/button_9" />

            <Button
                android:id="@+id/button_Mul"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="#F38282"
                android:onClick="button_mul"
                android:text="@string/button_Mul" />

            <Button
                android:id="@+id/button_sin"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="#F38282"
                android:text="@string/button_sin" />

            <Button
                android:id="@+id/button_cos"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="#F38282"
                android:text="@string/button_cos" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/button_per1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="#F38282"
                android:text="@string/button_per1" />

            <Button
                android:id="@+id/button_0"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="#F38282"
                android:onClick="button_0"
                android:text="@string/button_0" />

            <Button
                android:id="@+id/button_dot"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="#F38282"
                android:onClick="button_dot"
                android:text="@string/button_dot" />

            <Button
                android:id="@+id/button_sub"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="#F38282"
                android:onClick="button_min"
                android:text="@string/button_sub" />

            <Button
                android:id="@+id/button_gen"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="#F38282"
                android:text="@string/button_gen" />

            <Button
                android:id="@+id/button_tan"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="#F38282"
                android:text="@string/button_tan" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/button_left"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="#F38282"
                android:onClick="button_left"
                android:text="@string/button_left" />

            <Button
                android:id="@+id/button_right"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="#F38282"
                android:onClick="button_right"
                android:text="@string/button_right" />

            <Button
                android:id="@+id/button_equ"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="#F38282"
                android:text="@string/button_equ" />

            <Button
                android:id="@+id/button_π"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="#F38282"
                android:text="@string/button_π" />

            <Button
                android:id="@+id/button_e"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="#F38282"
                android:text="@string/button_e" />

        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>